tests/NormalTests/paczka1/fuzzy1/27753923.err
Error in line 1: fMMXof A992 21,3
Error in line 21: fMMXof A609 82,2
Error in line 19: A594 A594 13,7
Error in line 34: wFSRLHGQ A594 75,7
Error in line 38: UA2kXiH87xN A609 68,6
Error in line 39: UA2kXiH87xN A594 61,3
